--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.15",
     "@clerk/nextjs": "^4.29.12",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.11.0",
@@ -19,9 +25,11 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@types/node": "^20",
